--- a/RasaChatbot/credentials.yml
+++ b/RasaChatbot/credentials.yml
@@ -36,4 +36,4 @@ rest:
 telegram:
   access_token: "5138644525:AAGL6w8JvpjBVZXxyPiB4D_kmg1IiobDniE"
   verify: "Vicky_ILS_bot"
-  webhook_url: "https://9f89-2a02-3102-40b6-5-91db-5b6f-966e-acde.eu.ngrok.io/webhooks/telegram/webhook"
+  webhook_url: "https://9c9a-2-214-127-238.ngrok.io/webhooks/telegram/webhook"
